# foundation-sunshine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.de.md  README.en.md  README.fr.md  README.ja.md  README.md  package.json  vite-plugin-ejs-v7.js  vite.config.js  vite.dev.config.js
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_zh.yml  feature_request_en.yml  feature_request_zh.yml
.github/workflows/: build-virtual-mouse-driver.yml  main.yml  sign-and-repackage.yml
cmake/compile_definitions/: common.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake
cmake/packaging/: FetchDriverDeps.cmake  common.cmake  sunshine.iss.in  windows.cmake  windows_innosetup.cmake  windows_nsis.cmake
cmake/prep/: options.cmake
cmake/targets/: linux.cmake  rust_tray.cmake  windows.cmake
docs/: PNA_FIX_COMPLETION_SUMMARY.md  PNA_FIX_EXPLANATION.md  PNA_QUICK_REFERENCE.md  PNA_TECHNICAL_SUMMARY.md  README_ENCODER_OPTIMIZATION.md  WEBUI_DEVELOPMENT.md  WGC_vs_DDAPI_Smoothness_Fun_Guide.md  configuration.md  contributing.md  run_command_dev_guide.md
examples/capture_plugin_nvfbc/: CMakeLists.txt  NOTICE.md  nvfbc_win_defs.h  sunshine_nvfbc_plugin.cpp
rust_tray/: Cargo.toml  README.md  build.rs  plan.md
rust_tray/.cargo/: config.toml
rust_tray/include/: rust_tray.h
rust_tray/src/: actions.rs  config.rs  dialogs.rs  i18n.rs  lib.rs  menu.rs  menu_items.rs  notification.rs
scripts/: README_I18N.md  format-i18n.js  reverse-sync-i18n.js  validate-i18n.js  vmouse_smoke.ps1
src/: abr.cpp  abr.h  audio.cpp  audio.h  config.cpp  config.h  config_operations.cpp  config_operations.h  confighttp.cpp  crypto.cpp  crypto.h  entry_handler.cpp  globals.cpp  globals.h  httpcommon.cpp  httpcommon.h  input.cpp  logging.cpp  logging.h  main.cpp  network.cpp  network.h  nvhttp.cpp  nvhttp.h  process.cpp  process.h  rtsp.cpp  rtsp.h  stream.cpp  system_tray.cpp  system_tray.h  system_tray_i18n.cpp  system_tray_i18n.h  system_tray_rust.cpp  video.cpp  video.h  video_colorspace.cpp  video_colorspace.h  webhook.h  webhook_format.cpp
src/amf/: amf_config.h  amf_d3d11.cpp  amf_d3d11.h  amf_encoded_frame.h  amf_encoder.h
src/assets/: abr_prompt.md
src/display_device/: parsed_config.cpp  parsed_config.h  session.cpp  session.h  settings.h  to_string.cpp  vdd_utils.cpp  vdd_utils.h
src/nvenc/: nvenc_config.h  nvenc_encoder.h
src/nvenc/common_impl/: nvenc_base.cpp  nvenc_base.h  nvenc_utils.cpp
src/platform/: common.h  run_command.h
src/platform/linux/: audio.cpp  display_device.cpp  misc.cpp  vaapi.cpp
src/platform/linux/input/: inputtino.cpp  legacy_input.cpp
src/platform/macos/: display_device.cpp  input.cpp  microphone.mm  misc.mm
src/platform/windows/: audio.cpp  display.h  display_amd.cpp  display_base.cpp  display_ram.cpp  display_vram.cpp  display_wgc.cpp  input.cpp  mic_write.cpp  mic_write.h  misc.cpp  misc.h  virtual_mouse.cpp  virtual_mouse.h  win_dark_mode.cpp  win_dark_mode.h
src/platform/windows/capture_plugin/: capture_plugin_api.h  capture_plugin_loader.cpp  capture_plugin_loader.h  display_plugin.cpp  display_plugin.h
src/platform/windows/display_device/: device_hdr_states.cpp  device_modes.cpp  device_topology.cpp  general_functions.cpp  session_listener.cpp  session_listener.h  settings.cpp  settings_topology.cpp  settings_topology.h  windows_utils.cpp  windows_utils.h
src/platform/windows/nvprefs/: driver_settings.h
src/sender/: CMakeLists.txt  sender_main.cpp
src/subprocess/: ipc_channel.cpp  ipc_channel.h  ipc_pipe.cpp  ipc_pipe.h  ipc_protocol.h  sender.cpp  sender.h  subprocess.cpp  subprocess.h  subprocess_config.cpp  subprocess_config.h  subprocess_logging.h  subprocess_manager.cpp  subprocess_manager.h
src_assets/common/assets/web/: apps.html  welcome.html.template
src_assets/common/assets/web/components/: AccordionItem.vue  AppEditor.vue  CheckboxField.vue  CommandTable.vue  CoverFinder.vue  FormField.vue  ImageSelector.vue  LogsSection.vue  ScanResultModal.vue  SetupWizard.vue
src_assets/common/assets/web/composables/: useAiDiagnosis.js  useApps.js  useBackground.js  useConfig.js  useLogout.js  useLogs.js  useQrPair.js  useTroubleshooting.js
src_assets/common/assets/web/config/: i18n.js
src_assets/common/assets/web/styles/: apps.less  global.less  (+3 more)
src_assets/macos/assets/: Info.plist
src_assets/windows/misc/gamepad/: uninstall-gamepad.bat
src_assets/windows/misc/service/: install-service.bat
src_assets/windows/misc/vdd/: uninstall-vdd.bat
src_assets/windows/misc/vmouse/: install-vmouse.bat  uninstall-vmouse.bat
src_assets/windows/misc/vsink/: install-vsink.bat
tests/: CMakeLists.txt  tests_environment.h
tests/tools/: vmouse_logging_stubs.cpp  vmouse_probe.cpp  vmouse_send_diag.cpp
tests/unit/: test_audio.cpp  test_network.cpp
tests/unit/platform/windows/: test_virtual_mouse.cpp
tools/: CMakeLists.txt  test_args.cpp
(+74 files in other folders)
